# api_base.py
@@ -1,0 +1,10 @@
+from django.http import JsonResponse
+
+def StandardResponse(status, results) -> dict:
+    responseType = type(results[0]) if len(results) > 0 else None
+    if(responseType):
+    	response = {"StatusCode": status, "Type": (responseType.__name__), "Results": results }
+    else:
+        response = {"StatusCode": status, "Type": "None", "Results": []}
+    return JsonResponse(response,status=status)
+     
