# echo/views.py
@@ -4,14 +4,8 @@ from rest_framework import viewsets, permissions
 from rest_framework.viewsets import ModelViewSet
 from datetime import datetime
 from pytz import timezone
+from api_base import StandardResponse
 # Create your views here.
-def StandardResponse(status, results) -> dict:
-        responseType = type(results[0]) if len(results) > 0 else None
-        response = {"StatusCode": status, "Type": (responseType.__name__), "Results": results }
-        return response
-
 def healthCheck(request):
-    response = StandardResponse(200, ["healthy"]) 
-    print((response))
-    return JsonResponse(dict(response), safe=False)
+    return StandardResponse(200, ["healthy"])
 
